1_编译原理实验二（含实验一代码）/MIDL/MIDLGrammarRulesParser.py
# Generated from MIDLGrammarRules.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MIDLGrammarRulesParser ( Parser ):

    grammarFileName = "MIDLGrammarRules.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'module'", "'{'", "'}'", "'struct'", 
                     "'::'", "'char'", "'string'", "'boolean'", "'float'", 
                     "'double'", "'long double'", "'short'", "'int16'", 
                     "'long'", "'int32'", "'int64'", "'int8'", "'unsigned'", 
                     "'unit16'", "'unit32'", "'unit64'", "'unit8'", "','", 
                     "'='", "'['", "']'", "'|'", "'^'", "'&'", "'>>'", "'<<'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'~'", "<INVALID>", 
                     "<INVALID>", "'_'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "BOOLEAN", 
                      "FLOAT_TYPE_SUFFIX", "UNDERLINE", "INTEGER_TYPE_SUFFIX", 
                      "INTEGER", "EXPONENT", "FLOATING_PT", "ESCAPE_SEQUENCE", 
                      "CHAR", "STRING", "ID", "LETTER", "DIGIT", "WS" ]

    RULE_specification = 0
    RULE_definition = 1
    RULE_module = 2
    RULE_type_decl = 3
    RULE_struct_type = 4
    RULE_member_list = 5
    RULE_type_spec = 6
    RULE_scoped_name = 7
    RULE_base_type_spec = 8
    RULE_floating_pt_type = 9
    RULE_integer_type = 10
    RULE_signed_int = 11
    RULE_unsigned_int = 12
    RULE_declarators = 13
    RULE_declarator = 14
    RULE_simple_declarator = 15
    RULE_array_declarator = 16
    RULE_exp_list = 17
    RULE_or_expr = 18
    RULE_xor_expr = 19
    RULE_and_expr = 20
    RULE_shift_expr = 21
    RULE_add_expr = 22
    RULE_mult_expr = 23
    RULE_unary_expr = 24
    RULE_literal = 25

    ruleNames =  [ "specification", "definition", "module", "type_decl", 
                   "struct_type", "member_list", "type_spec", "scoped_name", 
                   "base_type_spec", "floating_pt_type", "integer_type", 
                   "signed_int", "unsigned_int", "declarators", "declarator", 
                   "simple_declarator", "array_declarator", "exp_list", 
                   "or_expr", "xor_expr", "and_expr", "shift_expr", "add_expr", 
                   "mult_expr", "unary_expr", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    BOOLEAN=39
    FLOAT_TYPE_SUFFIX=40
    UNDERLINE=41
    INTEGER_TYPE_SUFFIX=42
    INTEGER=43
    EXPONENT=44
    FLOATING_PT=45
    ESCAPE_SEQUENCE=46
    CHAR=47
    STRING=48
    ID=49
    LETTER=50
    DIGIT=51
    WS=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SpecificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MIDLGrammarRulesParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(MIDLGrammarRulesParser.DefinitionContext,i)


        def getRuleIndex(self):
            return MIDLGrammarRulesParser.RULE_specification

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpecification" ):
                return visitor.visitSpecification(self)
            else:
                return visitor.visitChildren(self)




    def specification(self):

        localctx = MIDLGrammarRulesParser.SpecificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_specification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 52
                self.definition()
                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MIDLGrammarRulesParser.T__1 or _la==MIDLGrammarRulesParser.T__4):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_decl(self):
            return self.getTypedRuleContext(MIDLGrammarRulesParser.Type_declContext,0)


        def module(self):
            return self.getTypedRuleContext(MIDLGrammarRulesParser.ModuleContext,0)


        def getRuleIndex(self):
            return MIDLGrammarRulesParser.RULE_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = MIDLGrammarRulesParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MIDLGrammarRulesParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.type_decl()
                self.state = 58
                self.match(MIDLGrammarRulesParser.T__0)
                pass
            elif token in [MIDLGrammarRulesParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.module()
                self.state = 61
                self.match(MIDLGrammarRulesParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MIDLGrammarRulesParser.ID, 0)

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MIDLGrammarRulesParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(MIDLGrammarRulesParser.DefinitionContext,i)


        def getRuleIndex(self):
            return MIDLGrammarRulesParser.RULE_module

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule" ):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = MIDLGrammarRulesParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_module)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(MIDLGrammarRulesParser.T__1)
            self.state = 66
            self.match(MIDLGrammarRulesParser.ID)
            self.state = 67
            self.match(MIDLGrammarRulesParser.T__2)
            self.state = 69 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 68
                self.definition()
                self.state = 71 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MIDLGrammarRulesParser.T__1 or _la==MIDLGrammarRulesParser.T__4):
                    break

            self.state = 73
            self.match(MIDLGrammarRulesParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_type(self):
            return self.getTypedRuleContext(MIDLGrammarRulesParser.Struct_typeContext,0)


        def ID(self):
            return self.getToken(MIDLGrammarRulesParser.ID, 0)

        def getRuleIndex(self):
            return MIDLGrammarRulesParser.RULE_type_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_decl" ):
                return visitor.visitType_decl(self)
            else:
                return visitor.visitChildren(self)




    def type_decl(self):

        localctx = MIDLGrammarRulesParser.Type_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_decl)
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.struct_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.match(MIDLGrammarRulesParser.T__4)
                self.state = 77
                self.match(MIDLGrammarRulesParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MIDLGrammarRulesParser.ID, 0)

        def member_list(self):
            return self.getTypedRuleContext(MIDLGrammarRulesParser.Member_listContext,0)


        def getRuleIndex(self):
            return MIDLGrammarRulesParser.RULE_struct_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_type" ):
                return visitor.visitStruct_type(self)
            else:
                return visitor.visitChildren(self)




    def struct_type(self):

        localctx = MIDLGrammarRulesParser.Struct_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_struct_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(MIDLGrammarRulesParser.T__4)
            self.state = 81
            self.match(MIDLGrammarRulesParser.ID)
            self.state = 82
            self.match(MIDLGrammarRulesParser.T__2)
            self.state = 83
            self.member_list()
            self.state = 84
            self.match(MIDLGrammarRulesParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Member_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MIDLGrammarRulesParser.Type_specContext)
            else:
                return self.getTypedRuleContext(MIDLGrammarRulesParser.Type_specContext,i)


        def declarators(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MIDLGrammarRulesParser.DeclaratorsContext)
            else:
                return self.getTypedRuleContext(MIDLGrammarRulesParser.DeclaratorsContext,i)


        def getRuleIndex(self):
            return MIDLGrammarRulesParser.RULE_member_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember_list" ):
                return visitor.visitMember_list(self)
            else:
                return visitor.visitChildren(self)




    def member_list(self):

        localctx = MIDLGrammarRulesParser.Member_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_member_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MIDLGrammarRulesParser.T__4) | (1 << MIDLGrammarRulesParser.T__5) | (1 << MIDLGrammarRulesParser.T__6) | (1 << MIDLGrammarRulesParser.T__7) | (1 << MIDLGrammarRulesParser.T__8) | (1 << MIDLGrammarRulesParser.T__9) | (1 << MIDLGrammarRulesParser.T__10) | (1 << MIDLGrammarRulesParser.T__11) | (1 << MIDLGrammarRulesParser.T__12) | (1 << MIDLGrammarRulesParser.T__13) | (1 << MIDLGrammarRulesParser.T__14) | (1 << MIDLGrammarRulesParser.T__15) | (1 << MIDLGrammarRulesParser.T__16) | (1 << MIDLGrammarRulesParser.T__17) | (1 << MIDLGrammarRulesParser.T__18) | (1 << MIDLGrammarRulesParser.T__19) | (1 << MIDLGrammarRulesParser.T__20) | (1 << MIDLGrammarRulesParser.T__21) | (1 << MIDLGrammarRulesParser.T__22) | (1 << MIDLGrammarRulesParser.ID))) != 0):
                self.state = 86
                self.type_spec()
                self.state = 87
                self.declarators()
                self.state = 88
                self.match(MIDLGrammarRulesParser.T__0)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scoped_name(self):
            return self.getTypedRuleContext(MIDLGrammarRulesParser.Scoped_nameContext,0)


        def base_type_spec(self):
            return self.getTypedRuleContext(MIDLGrammarRulesParser.Base_type_specContext,0)


        def struct_type(self):
            return self.getTypedRuleContext(MIDLGrammarRulesParser.Struct_typeContext,0)


        def getRuleIndex(self):
            return MIDLGrammarRulesParser.RULE_type_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_spec" ):
                return visitor.visitType_spec(self)
            else:
                return visitor.visitChildren(self)




    def type_spec(self):

        localctx = MIDLGrammarRulesParser.Type_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_type_spec)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MIDLGrammarRulesParser.T__5, MIDLGrammarRulesParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.scoped_name()
                pass
            elif token in [MIDLGrammarRulesParser.T__6, MIDLGrammarRulesParser.T__7, MIDLGrammarRulesParser.T__8, MIDLGrammarRulesParser.T__9, MIDLGrammarRulesParser.T__10, MIDLGrammarRulesParser.T__11, MIDLGrammarRulesParser.T__12, MIDLGrammarRulesParser.T__13, MIDLGrammarRulesParser.T__14, MIDLGrammarRulesParser.T__15, MIDLGrammarRulesParser.T__16, MIDLGrammarRulesParser.T__17, MIDLGrammarRulesParser.T__18, MIDLGrammarRulesParser.T__19, MIDLGrammarRulesParser.T__20, MIDLGrammarRulesParser.T__21, MIDLGrammarRulesParser.T__22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.base_type_spec()
                pass
            elif token in [MIDLGrammarRulesParser.T__4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.struct_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Scoped_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MIDLGrammarRulesParser.ID)
            else:
                return self.getToken(MIDLGrammarRulesParser.ID, i)

        def getRuleIndex(self):
            return MIDLGrammarRulesParser.RULE_scoped_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScoped_name" ):
                return visitor.visitScoped_name(self)
            else:
                return visitor.visitChildren(self)




    def scoped_name(self):

        localctx = MIDLGrammarRulesParser.Scoped_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_scoped_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MIDLGrammarRulesParser.T__5:
                self.state = 100
                self.match(MIDLGrammarRulesParser.T__5)


            self.state = 103
            self.match(MIDLGrammarRulesParser.ID)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MIDLGrammarRulesParser.T__5:
                self.state = 104
                self.match(MIDLGrammarRulesParser.T__5)
                self.state = 105
                self.match(MIDLGrammarRulesParser.ID)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Base_type_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def floating_pt_type(self):
            return self.getTypedRuleContext(MIDLGrammarRulesParser.Floating_pt_typeContext,0)


        def integer_type(self):
            return self.getTypedRuleContext(MIDLGrammarRulesParser.Integer_typeContext,0)


        def getRuleIndex(self):
            return MIDLGrammarRulesParser.RULE_base_type_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBase_type_spec" ):
                return visitor.visitBase_type_spec(self)
            else:
                return visitor.visitChildren(self)




    def base_type_spec(self):

        localctx = MIDLGrammarRulesParser.Base_type_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_base_type_spec)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MIDLGrammarRulesParser.T__9, MIDLGrammarRulesParser.T__10, MIDLGrammarRulesParser.T__11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.floating_pt_type()
                pass
            elif token in [MIDLGrammarRulesParser.T__12, MIDLGrammarRulesParser.T__13, MIDLGrammarRulesParser.T__14, MIDLGrammarRulesParser.T__15, MIDLGrammarRulesParser.T__16, MIDLGrammarRulesParser.T__17, MIDLGrammarRulesParser.T__18, MIDLGrammarRulesParser.T__19, MIDLGrammarRulesParser.T__20, MIDLGrammarRulesParser.T__21, MIDLGrammarRulesParser.T__22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.integer_type()
                pass
            elif token in [MIDLGrammarRulesParser.T__6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.match(MIDLGrammarRulesParser.T__6)
                pass
            elif token in [MIDLGrammarRulesParser.T__7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.match(MIDLGrammarRulesParser.T__7)
                pass
            elif token in [MIDLGrammarRulesParser.T__8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 115
                self.match(MIDLGrammarRulesParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Floating_pt_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MIDLGrammarRulesParser.RULE_floating_pt_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloating_pt_type" ):
                return visitor.visitFloating_pt_type(self)
            else:
                return visitor.visitChildren(self)




    def floating_pt_type(self):

        localctx = MIDLGrammarRulesParser.Floating_pt_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_floating_pt_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MIDLGrammarRulesParser.T__9) | (1 << MIDLGrammarRulesParser.T__10) | (1 << MIDLGrammarRulesParser.T__11))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Integer_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def signed_int(self):
            return self.getTypedRuleContext(MIDLGrammarRulesParser.Signed_intContext,0)


        def unsigned_int(self):
            return self.getTypedRuleContext(MIDLGrammarRulesParser.Unsigned_intContext,0)


        def getRuleIndex(self):
            return MIDLGrammarRulesParser.RULE_integer_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger_type" ):
                return visitor.visitInteger_type(self)
            else:
                return visitor.visitChildren(self)




    def integer_type(self):

        localctx = MIDLGrammarRulesParser.Integer_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_integer_type)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MIDLGrammarRulesParser.T__12, MIDLGrammarRulesParser.T__13, MIDLGrammarRulesParser.T__14, MIDLGrammarRulesParser.T__15, MIDLGrammarRulesParser.T__16, MIDLGrammarRulesParser.T__17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.signed_int()
                pass
            elif token in [MIDLGrammarRulesParser.T__18, MIDLGrammarRulesParser.T__19, MIDLGrammarRulesParser.T__20, MIDLGrammarRulesParser.T__21, MIDLGrammarRulesParser.T__22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.unsigned_int()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Signed_intContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MIDLGrammarRulesParser.RULE_signed_int

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSigned_int" ):
                return visitor.visitSigned_int(self)
            else:
                return visitor.visitChildren(self)




    def signed_int(self):

        localctx = MIDLGrammarRulesParser.Signed_intContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_signed_int)
        self._la = 0 # Token type
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                _la = self._input.LA(1)
                if not(_la==MIDLGrammarRulesParser.T__12 or _la==MIDLGrammarRulesParser.T__13):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                _la = self._input.LA(1)
                if not(_la==MIDLGrammarRulesParser.T__14 or _la==MIDLGrammarRulesParser.T__15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MIDLGrammarRulesParser.T__14]:
                    self.state = 126
                    self.match(MIDLGrammarRulesParser.T__14)
                    self.state = 127
                    self.match(MIDLGrammarRulesParser.T__14)
                    pass
                elif token in [MIDLGrammarRulesParser.T__16]:
                    self.state = 128
                    self.match(MIDLGrammarRulesParser.T__16)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 131
                self.match(MIDLGrammarRulesParser.T__17)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unsigned_intContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MIDLGrammarRulesParser.RULE_unsigned_int

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnsigned_int" ):
                return visitor.visitUnsigned_int(self)
            else:
                return visitor.visitChildren(self)




    def unsigned_int(self):

        localctx = MIDLGrammarRulesParser.Unsigned_intContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_unsigned_int)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MIDLGrammarRulesParser.T__18]:
                    self.state = 134
                    self.match(MIDLGrammarRulesParser.T__18)
                    self.state = 135
                    self.match(MIDLGrammarRulesParser.T__12)
                    pass
                elif token in [MIDLGrammarRulesParser.T__19]:
                    self.state = 136
                    self.match(MIDLGrammarRulesParser.T__19)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MIDLGrammarRulesParser.T__18]:
                    self.state = 139
                    self.match(MIDLGrammarRulesParser.T__18)
                    self.state = 140
                    self.match(MIDLGrammarRulesParser.T__14)
                    pass
                elif token in [MIDLGrammarRulesParser.T__20]:
                    self.state = 141
                    self.match(MIDLGrammarRulesParser.T__20)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MIDLGrammarRulesParser.T__18]:
                    self.state = 144
                    self.match(MIDLGrammarRulesParser.T__18)
                    self.state = 145
                    self.match(MIDLGrammarRulesParser.T__14)
                    self.state = 146
                    self.match(MIDLGrammarRulesParser.T__14)
                    pass
                elif token in [MIDLGrammarRulesParser.T__21]:
                    self.state = 147
                    self.match(MIDLGrammarRulesParser.T__21)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 150
                self.match(MIDLGrammarRulesParser.T__22)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaratorsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MIDLGrammarRulesParser.DeclaratorContext)
            else:
                return self.getTypedRuleContext(MIDLGrammarRulesParser.DeclaratorContext,i)


        def getRuleIndex(self):
            return MIDLGrammarRulesParser.RULE_declarators

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarators" ):
                return visitor.visitDeclarators(self)
            else:
                return visitor.visitChildren(self)




    def declarators(self):
